# VTKViewer

./: .gitignore  CMakeLists.txt  flow.drawio  flow.md
App/: Camera.hpp  GLWidget.cpp  GLWidget.hpp  MainWindow.cpp  MainWindow.hpp  MeshProcessor.cpp  MeshProcessor.hpp  main.cpp
Loader/: Loader.cpp  Loader.hpp  LoaderFactory.cpp  LoaderFactory.hpp  VTKLegacyLoader.cpp  VTKLegacyLoader.hpp
Resources/: shaders.qrc
Resources/shaders/: axes.frag  axes.vert  mesh.frag  mesh.vert  wire.frag  wire.vert
